# OpenEDA

./: CLA.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml  test_pipeline.py
.GitHub/workflows/: ci.yml  test_pipeline.yml
.github /workflows/: ci.yml
.github/ISSUE_TEMPLATE/: SECURITY.md  bug_report.md  config.yaml  feature_report.md
.github/workflows/: ci.yml  main.yml
openeda /: __init__.py  cli.py  test_pipeline.py
openeda /bench/: __init__.py  evaluate.py
openeda /example/: __init__.py  ota_2stage.sp
openeda /export/: __init__.py  gds.py
openeda /netlist/: __init__.py  parser.py
openeda /placement/: __init__.py  placer.py
openeda /routing/: __init__.py  simple.py
