[build-system]
requires = [
    "setuptools>=70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "openeda"
version = "0.1.0"
description = "Open-source analog electronic design automation framework for layout generation, routing, benchmarking, and research."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

authors = [
    {name = "Kazi Saad Asif"}
]

keywords = [
    "eda",
    "analog",
    "layout",
    "vlsi",
    "ic",
    "electronic-design-automation",
    "cad",
    "routing",
    "placement",
    "gdsii",
    "research",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "shapely>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "ruff>=0.5",
    "flake8>=7",
    "bandit>=1.7",
    "build>=1.2",
    "twine>=5",
]

docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/ksaad20/OpenEDA"
Repository = "https://github.com/ksaad20/OpenEDA"
Issues = "https://github.com/ksaad20/OpenEDA/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["openeda*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-ra -q"

[tool.coverage.run]
source = [
    "openeda",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = [
    "tests",
]
