[build-system]
requires = [
    "setuptools>=77.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "openeda"
version = "0.0.1"
description = "OpenEDA: Open-source Electronic Design Automation framework."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

authors = [
    { name = "Kazi Saad Asif" }
]

keywords = [
    "EDA",
    "analog",
    "layout",
    "routing",
    "VLSI",
    "IC",
    "GDSII",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "flake8>=7.0",
    "bandit>=1.7",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/ksaad20/OpenEDA"
Repository = "https://github.com/ksaad20/OpenEDA"
Issues = "https://github.com/ksaad20/OpenEDA/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openeda*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-ra"

[tool.coverage.run]
source = [
    "openeda",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = [
    "tests",
]
